@@ -3,18 +3,4 @@
 
 	GET	include/nop.s
 
-	; Test the Thumb variants.
-	THUMB
-	[ :LNOT: REFERENCE
-
-	NOP
-	NOP.W
-
-	|
-
-	DCI 0xBF00
-	DCI.W 0xf3af8000
-
-	]
-
 	END
